Brought the listextensions code into master branch.

--- a/VulkanTest/Makefile
+++ b/VulkanTest/Makefile
@@ -1,6 +1,14 @@
 
 CC=gcc
+CFLAGS=-lglfw -lstdc++ -lvulkan
 
 
-all:		
-	$(CC) -lglfw -lstdc++ -lvulkan -o VulkanTest Source.cpp
+all:		numberextensions listextensions
+
+
+numberextensions:		
+		$(CC) $(CFLAGS) -o numberextensions numberextensions.cpp
+
+
+listextensions:		
+		$(CC) $(CFLAGS) -o listextensions listextensions.cpp
