Brought the code from the pick_physical_device branch into the master branch.

--- a/VulkanTest/Makefile
+++ b/VulkanTest/Makefile
@@ -3,7 +3,7 @@ CC=gcc
 CFLAGS=-lglfw -lstdc++ -lvulkan
 
 
-all:		numberextensions listextensions
+all:		numberextensions listextensions pickphysicaldevice
 
 
 numberextensions:		
@@ -12,3 +12,7 @@ numberextensions:
 
 listextensions:		
 		$(CC) $(CFLAGS) -o listextensions listextensions.cpp
+
+
+pickphysicaldevice:		
+		$(CC) $(CFLAGS) -o pickphysicaldevice pickphysicaldevice.cpp
